# brackeys-tutorial

./: .gitignore  flake.nix  justfile
godot/: brakeys_tutorial.gdextension  brakeys_tutorial.gdextension.uid  default_bus_layout.tres  project.godot
godot/assets/dialog/: restart.dialogue  restart.dialogue.import  warning.dialogue  warning.dialogue.import
godot/assets/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
godot/assets/music/: time_for_adventure.mp3.import
godot/assets/sounds/: coin.wav.import  explosion.wav.import  hurt.wav.import  jump.wav.import  power_up.wav.import  tap.wav.import
godot/assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
godot/resources/: balloon_theme.tres  default_bus_layout.tres  main._theme.tres  score_resource.tres
godot/scenes/: balloon.gd.uid  balloon.tscn  bevy_app_singleton.tscn  bg_music.tscn  coin.tscn  dialog_marker.gd  dialog_marker.gd.uid  dialog_marker.tscn  enemy.tscn  game.tscn  killplane.tscn  platform.tscn  player.tscn  tilemap.tres
godot/scenes/actors/: player.tscn
godot/scenes/entities/: enemy.tscn  kill_plane_node.tscn
rust/: Cargo.toml
rust/crates/menu_plugin/: Cargo.toml
rust/crates/menu_plugin/src/: lib.rs
rust/src/: enemy.rs  killplane.rs  lib.rs  pickup_component.rs  player_controller.rs  score_label.rs  score_resource.rs
rust/src/actors/: mod.rs  player.rs
rust/src/gameplay/: killplane.rs  mod.rs
rust/src/ui/: main_menu.rs  mod.rs
(+3 files in other folders)
