[package]
name = "brackeys_tutorial"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["crates/menu_plugin"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["bevy_state"] }
bevy_asset_loader = "0.23.0"
godot = "0.3.4"
godot-bevy = "0.9.0"
# workpace deps
menu_plugin = { path = "./crates/menu_plugin" } 
